add template, improve formatting, rename notes

--- a/docs/meeting_minutes/2025-02-19.md
+++ b/docs/meeting_minutes/2025-02-19.md
@@ -1,10 +1,10 @@
 # Harmonic Links - Weekly Update
 
-**Date:** 2025/02/19
-**Time:** 2:15 PM - 3:00 PM
+**Date:** 2025/02/19 \
+**Time:** 2:15 PM - 2:45 PM
 
-**Attendees:** Alec Ibarra, Ben Wowo, Kevin Dang, Nate Christie, Srujana Ayyagari, Sunaina Ayyagari
-**Absentees:** None
+**Attendees:** Alec Ibarra, Ben Wowo, Kevin Dang, Nate Christie, Srujana Ayyagari, Sunaina Ayyagari \
+**Absentees:** None \
 **Note Taker:** Alec Ibarra
 
 ## Meeting Agenda
@@ -39,6 +39,6 @@
 - **Project Proposal Due:** 2025/03/07
 
 ## Next Weekly Update
-**Date:** 2025/02/26
-**Time:** 2:15 PM - 3:00 PM
+**Date:** 2025/02/26 \
+**Time:** 2:15 PM - 2:45 PM \
 **Next Note Taker:** Nate Christie
