add to status report

--- a/docs/status_reports/2025-03-26.md
+++ b/docs/status_reports/2025-03-26.md
@@ -5,19 +5,20 @@
 
 
 ### **Alec:**
-Total Number Hours Worked: 8hrs
+Total Number Hours Worked: 3hrs
 - Tasks Completed:
-  - 
+  - Deciding the api routes the frontend needs to function
+  - Planning out how to integrate frontend with planned backend routes
 - Tasks for Next Week:
-  - 
+  - Begin actual integration of frontend with backend
 
 
 ### **Ben:**
 Total Number Hours Worked: 8hrs
 - Tasks Completed:
-  - 
+  -
 - Tasks for Next Week:
-  - 
+  -
 
 
 ### **Srujana:**
@@ -26,7 +27,7 @@ Total Number Hours Worked: 3hrs
   - Testing backend and frontend integration
 - Tasks for Next Week:
   - Continue testing integration
-  - Make changes to UI as needed. 
+  - Make changes to UI as needed.
 
 
 ### **Sunaina:**
@@ -37,7 +38,7 @@ Total Number Hours Worked: 3
 
 - Tasks for Next Week:
   - Continuing working on page route for game over
-  - using data that was seeded in the database for testing 
+  - using data that was seeded in the database for testing
 
 
 ### **Kevin:**
