update status report

--- a/docs/status_reports/2025-03-26.md
+++ b/docs/status_reports/2025-03-26.md
@@ -14,11 +14,11 @@ Total Number Hours Worked: 3hrs
 
 
 ### **Ben:**
-Total Number Hours Worked: 8hrs
+Total Number Hours Worked: 3hrs
 - Tasks Completed:
-  -
+  - begin integration of game over screen frontend with backend data
 - Tasks for Next Week:
-  -
+  - complete integration of game over screen frontend with backend data
 
 
 ### **Srujana:**
