update status report

--- a/docs/status_reports/2025-04-09.md
+++ b/docs/status_reports/2025-04-09.md
@@ -17,11 +17,11 @@ Total Number Hours Worked: 10
 
 
 ### **Ben:**
-Total Number Hours Worked:
+Total Number Hours Worked: 8
 - Tasks Completed:
-  -
+  - Add user scoring on game over screen based on chain legnth
 - Tasks for Next Week:
-  -
+  - Write user scores into database and reflect other user scores on game over leaderboard screen
 
 
 ### **Srujana:**
