--- a/docs/status_reports/2025-04-16.md
+++ b/docs/status_reports/2025-04-16.md
@@ -15,7 +15,8 @@ Total Number Hours Worked:
 ### **Ben:**
 Total Number Hours Worked: 8
 - Tasks Completed:
-  - 
+  - Added route and service to upload user scores into leaderboard
+  - Refactored game state logic to support leaderboard upload service
 - Tasks for Next Week:
   -
 
