complete status report :

--- a/docs/status_reports/2025-04-16.md
+++ b/docs/status_reports/2025-04-16.md
@@ -24,7 +24,7 @@ Total Number Hours Worked: 8
   - Added route and service to upload user scores into leaderboard
   - Refactored game state logic to support leaderboard upload service
 - Tasks for Next Week:
-  -
+  - Use supabase admin key to display leaderboard stats on game over page
 
 
 ### **Srujana:**
