complete status report

--- a/docs/status_reports/2025-04-16.md
+++ b/docs/status_reports/2025-04-16.md
@@ -28,20 +28,19 @@ Total Number Hours Worked: 8
 
 
 ### **Srujana:**
-Total Number Hours Worked:
+Total Number Hours Worked: 8
 - Tasks Completed:
-  -
+  - Clean up and refactor OAuth route responses
 - Tasks for Next Week:
-  -
+  - Standardize OAuth route responses
 
 
 ### **Sunaina:**
 Total Number Hours Worked:
 - Tasks Completed:
-  -
-  -
+  - Made progress on create playlist functionality.
 - Tasks for Next Week:
-  -
+  - Complete create playlist functinoality.
 
 
 
