update status report

--- a/docs/status_reports/2025-04-23.md
+++ b/docs/status_reports/2025-04-23.md
@@ -18,11 +18,12 @@ Total Number Hours Worked: 10
 
 
 ### **Ben:**
-Total Number Hours Worked:
+Total Number Hours Worked: 8
 - Tasks Completed:
-  -
+  - Completed leaderboard functionality
 - Tasks for Next Week:
-  -
+  - Clean up and smooth ui/ux
+  - Work on report and final presentation
 
 
 ### **Srujana:**
