--- a/docs/status_reports/2025-04-30.md
+++ b/docs/status_reports/2025-04-30.md
@@ -13,11 +13,11 @@ Total Number Hours Worked:
 
 
 ### **Ben:**
-Total Number Hours Worked: 
+Total Number Hours Worked: 8
 - Tasks Completed:
-  - 
+  - Fixed bugs related to leaderboard functionality
 - Tasks for Next Week:
-  - 
+  - Work on report
 
 
 ### **Srujana:**
